--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Gifts#index</h1>
-<p>Find me in app/views/gifts/index.html.erb</p>
+<h1><%= @person.name %></h1>
+<ul>
+  <% @gifts.each do |gift| %>
+    <li>
+      <%= gift.name %><br>
+      <%= gift.descript %><br>
+      <%= gift.bought %>
+    </li>
+  <% end %>
+</ul>
