--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,2 +1,9 @@
-<h1>People#index</h1>
-<p>Find me in app/views/people/index.html.erb</p>
+<h1>Sakey Family Member</h1>
+<ul>
+  <% @people.each do |person| %>
+    <li>
+      <%= person.name %><br>
+      <%= person.birthday.to_formatted_s(:birthday) %>
+    </li>
+  <% end %>
+</ul>
