changing from default rails stuff

--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Gifts#show</h1>
-<p>Find me in app/views/gifts/show.html.erb</p>
+<h1><%= @person.name %></h1>
+<p><%= @gift.name %></p>
+<p>Description:<br><%= @gift.descript %></p>
